Fixed mobile alignment issues

--- a/styles.css
+++ b/styles.css
@@ -169,14 +169,15 @@ header {
         padding: 5px;
     }
     .pastor-img {
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
     }
 }
 
 h1, h2 {
     color: #7289A6;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 nav ul {
